# pipe-communication

./: README.md
A01_pgm/: CMakeLists.txt  input_1.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  main  main.cpp
